fixed about not aligning

--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -57,7 +57,8 @@ ul {
     background: #555;
 }
 
-h2{
+h2 {
     font-size: 5vw;
     font-family: Couture;
+    margin-bottom: 20px;
 }
