--- a/src/assets/scss/components/_about.scss
+++ b/src/assets/scss/components/_about.scss
@@ -1,16 +1,18 @@
-.about {
+.about-wrapper {
     padding: 20px 0;
     min-height: 700px;
-    gap: 50px;
+    display: flex;
+    align-items: center;
 
-    .scope,
-    .me {
-        height: 300px;
-    }
-
-    .scope {
-        p {
-            margin: auto;
+    .about {
+        gap: 50px;
+        justify-self: center;
+        @include for-mobile-layout {
+            flex-direction: column;
+    
+            h2 {
+                font-size: 10vw;
+            }
         }
     }
 
@@ -40,11 +42,5 @@
         filter: contrast(0);
     }
 
-    @include for-mobile-layout {
-        flex-direction: column;
 
-        h2 {
-            font-size: 10vw;
-        }
-    }
 }
