--- a/src/assets/scss/components/_portfolio.scss
+++ b/src/assets/scss/components/_portfolio.scss
@@ -6,10 +6,6 @@
     font-size: 50px;
     font-family: Couture;
 
-    h2 {
-        margin-bottom: 20px;
-    }
-
     .gallery {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
